Add custom fields and loops to section_services

--- a/wp-content/themes/simple/sass/_services.scss
+++ b/wp-content/themes/simple/sass/_services.scss
@@ -66,6 +66,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        text-transform: uppercase;
 
 
         &--speach {
@@ -119,6 +120,7 @@
         // margin-top: 75px;
         line-height: 25px;
         text-align: justify;
+
 
 
 
