--- a/wp-content/themes/simple/sass/_contact.scss
+++ b/wp-content/themes/simple/sass/_contact.scss
@@ -30,21 +30,21 @@
 
     &__branch {
         // display: none;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        height: 270px;
-        border-bottom: dotted 2px white;
+        display: flex !important;
+        align-items: center !important;
+        justify-content: space-between !important;
+        height: 270px !important;
+        border-bottom: dotted 2px white !important;
         // background-color: green;
 
         .branch__item {
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            height: 181px;
-            font-size: 1.7rem;
-            font-weight: 300;
-            color: white;
+            display: flex !important;
+            flex-direction: column !important;
+            justify-content: space-between !important;
+            height: 181px !important;
+            font-size: 1.7rem !important;
+            font-weight: 300 !important;
+            color: white !important;
 
 
         }
