Add custom contact form to section_contact

--- a/wp-content/themes/simple/sass/_contact.scss
+++ b/wp-content/themes/simple/sass/_contact.scss
@@ -109,7 +109,7 @@
 
                 .form__input {
                     margin-bottom: 14px;
-                    width: 100%;
+                    width: 420px;
                     height: 32px;
                     padding-left: 10px;
 
@@ -127,7 +127,7 @@
 
                 .form__text-area {
                     margin-bottom: 14px;
-                    width: 100%;
+                    width: 420px;
                     height: 86px;
                     resize: none;
 
@@ -147,7 +147,7 @@
 
 
                 .checkboxes__text {
-                    width: 100%;
+                    width: 420px;
                     margin-bottom: 15px;
                     padding-left: 10px;
 
