Add not finished custom slider--small to section_news

--- a/wp-content/themes/simple/sass/_footer.scss
+++ b/wp-content/themes/simple/sass/_footer.scss
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 145px;
+    min-height: 145px;
     width: 100%;
     background-color: white;
 
