--- a/wp-content/themes/simple/sass/_contact.scss
+++ b/wp-content/themes/simple/sass/_contact.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: 976px;
+    min-height: 976px;
     width: 100%;
     background-color: $main-color;
 
@@ -10,7 +10,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        height: 170px;
+        min-height: 170px;
         border-bottom: dotted 2px white;
 
     }
@@ -30,7 +30,7 @@
 
     &__branch {
         // display: none;
-        display: flex !important;
+        display: flex;
         align-items: center !important;
         justify-content: space-between !important;
         height: 270px !important;
@@ -243,13 +243,13 @@
 @media screen and (max-width:$medium-device) {
     .contact {
 
-        height: 380px;
+        min-height: 380px;
 
 
 
         &__header {
 
-            height: 86px;
+            min-height: 86px;
 
 
         }
@@ -381,12 +381,12 @@
 
         &__branch {
             display: none;
-            height: 164px;
+
+
 
             .branch__item {
                 display: none;
-                height: 136px;
-                font-size: 1.2rem;
+
 
             }
         }
