--- a/wp-content/themes/simple/sass/_industries.scss
+++ b/wp-content/themes/simple/sass/_industries.scss
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    height: 978px;
+    min-height: 978px;
     width: 100%;
     background-color: $main-color;
 
@@ -11,7 +11,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        height: 18%;
+        min-height: 169px;
 
         border-bottom: dotted 2px white;
 
@@ -28,7 +28,7 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
-        height: 82%;
+        min-height: 769px;
         margin-top: 40px;
 
 
@@ -38,7 +38,7 @@
             align-items: flex-end;
             // justify-content: space-between;
 
-            height: 100%;
+            min-height: 100%;
 
 
 
@@ -120,11 +120,11 @@
 
 @media screen and (max-width:$medium-device) {
     .industries {
-        height: 445px;
+        min-height: 445px;
         width: 100%;
 
         &__header {
-            height: 77px;
+            min-height: 77px;
             border-bottom: dotted 1px white;
 
             .header__title {
@@ -141,11 +141,11 @@
     }
 
     .industries__gallery {
-        height: 350px;
+        min-height: 350px;
         margin-top: 20px;
 
         .gallery__column {
-            height: 100%;
+            min-height: 100%;
             width: 187px;
         }
 
@@ -192,11 +192,11 @@
 
 @media screen and (max-width:$small-device) {
     .industries {
-        height: 458px;
+        min-height: 458px;
         width: 100%;
 
         &__header {
-            height: 67px;
+            min-height: 67px;
             margin-bottom: 0px;
 
             .header__title {
@@ -212,7 +212,7 @@
     }
 
     .industries__gallery {
-        height: 374px;
+        min-height: 374px;
         margin-top: 5px;
         justify-content: space-between;
 
