--- a/wp-content/themes/simple/sass/_products.scss
+++ b/wp-content/themes/simple/sass/_products.scss
@@ -1,7 +1,7 @@
 .products {
     display: flex;
     flex-direction: column;
-    height: 984px;
+    min-height: 984px;
     background-color: white;
     width: 100%;
 
@@ -14,7 +14,7 @@
         align-items: center;
         justify-content: center;
         // margin-top: 38px;
-        height: 146px;
+        min-height: 146px;
         border-bottom: dotted 2px $main-color;
 
 
@@ -38,7 +38,7 @@
 
     .products__description {
         margin-top: 60px;
-        height: 253px;
+        min-height: 253px;
 
     }
 
@@ -66,7 +66,7 @@
         justify-content: space-between;
         align-items: center;
         flex-wrap: wrap;
-        height: 380px;
+        min-height: 380px;
         // background-color: burlywood;
     }
 
@@ -96,7 +96,7 @@
     .products {
         align-items: center;
 
-        height: 446px;
+        min-height: 446px;
         width: 100%;
 
 
@@ -105,7 +105,7 @@
         &__header {
 
             margin-top: 0px;
-            height: 74px;
+            min-height: 74px;
             border-bottom: dotted 2px $main-color;
 
 
@@ -133,7 +133,7 @@
         &__list {
 
 
-            height: 219px;
+            min-height: 219px;
             margin-top: 56px;
         }
 
@@ -169,14 +169,14 @@
         align-items: center;
 
 
-        height: 460px;
+        min-height: 460px;
         width: 100%;
 
 
         &__header {
 
             margin-top: 0px;
-            height: 50px;
+            min-height: 50px;
             border-bottom: dotted 1px $main-color;
 
 
@@ -221,7 +221,7 @@
             flex-direction: column;
             align-items: center;
             justify-content: space-between;
-            height: 347px;
+            min-height: 347px;
             width: 100%;
 
             margin-top: 25px;
