--- a/wp-content/themes/simple/style.css
+++ b/wp-content/themes/simple/style.css
@@ -1669,7 +1669,6 @@ html {
 }
 
 .news__item-image {
-	cursor: pointer;
 	width: 190px;
 	height: 190px;
 	clip-path: circle();
@@ -1728,15 +1727,6 @@ html {
 	right: -52px;
 }
 
-.news__item .news__item-image {
-	max-width: 100%;
-	max-height: 100%;
-}
-
-.news .news__list--small {
-	display: none;
-}
-
 @media screen and (max-width: 1000px) {
 	.news {
 		height: 446px;
@@ -1779,7 +1769,9 @@ html {
 		margin: 0px 10px;
 	}
 	.news__item .news__item-image {
-		width: 100%;
+		width: 190px;
+		height: 190px;
+		clip-path: circle();
 	}
 	.news__item .item__info {
 		display: none;
@@ -1798,7 +1790,6 @@ html {
 		text-decoration: none;
 	}
 	.news__item .item__info .info__text {
-		display: none;
 		padding-bottom: 10px;
 	}
 	.news__item .item__info .info__line {
@@ -1842,62 +1833,65 @@ html {
 		font-size: 1.6rem;
 	}
 	.news__list {
-		display: none;
-	}
-	.news .news__list--small {
 		display: flex;
 		flex-direction: column;
 		align-items: center;
-		justify-content: space-evenly;
+		justify-content: center;
 		width: 100%;
 		height: 387px;
 	}
-	.news .news__list--small .news__item--small {
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-		justify-content: space-evenly;
-		width: 100%;
-		height: 370px;
-		margin-top: 25px;
-		color: #023A5C;
-	}
-	.news .news__list--small .news__item--small .row {
+	.news__list .news__slider {
 		display: flex;
 		align-items: center;
 		justify-content: center;
 		width: 100%;
-		height: 164px;
+		height: 100%;
 	}
-	.news .news__list--small .news__item--small .row .item__image--small {
-		width: 100px;
-		height: 100px;
+	.news__item {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		width: 100%;
+		height: 387px;
+		margin-top: 0px;
+		color: #023A5C;
+	}
+	.news__item .news__item-image {
+		margin: 0 auto;
+		width: 165px;
+		height: 165px;
 		clip-path: circle();
 	}
-	.news .news__list--small .news__item--small .row .news__item--arrow--left {
-		margin-right: 40px;
-		width: 21px;
-		height: 34px;
+	.news__item .item__info {
+		margin-top: 0px;
+		display: flex;
+		flex-direction: column;
+		justify-content: flex-start;
+		align-items: center;
+		flex-basis: 185px;
+		width: 100%;
 	}
-	.news .news__list--small .news__item--small .row .news__item--arrow--right {
-		margin-left: 40px;
-		width: 21px;
-		height: 34px;
-		transform: rotate(180deg);
-	}
-	.news .news__list--small .news__item--small .info__title--small {
+	.news__item .item__info .info__title {
 		text-transform: uppercase;
 		font-size: 1.6rem;
 		margin-top: 10px;
 	}
-	.news .news__list--small .news__item--small .info__date--small {
-		font-size: 1.6rem;
-		margin-top: 20px;
+	.news__item .item__info .info__link {
+		display: none;
 	}
-	.news .news__list--small .news__item--small .info__text--small {
+	.news__item .item__info .info__text {
+		text-align: center;
 		width: 288px;
 		height: 110px;
 		font-size: 1.2rem;
+	}
+	.news__item .item__info .info__date {
+		font-size: 1.6rem;
+		margin-top: 20px;
+	}
+	.news__item .item__info .info__line {
+		display: none;
 	}
 }
 
@@ -2271,7 +2265,7 @@ html {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	min-height: 145px;
+	height: 145px;
 	width: 100%;
 	background-color: white;
 }
