--- a/wp-content/themes/simple/sass/_news.scss
+++ b/wp-content/themes/simple/sass/_news.scss
@@ -259,11 +259,15 @@
                 height: 25px;
 
                 &--left {
+                    width: 16px;
+                    height: 25px;
                     left: -48px;
                     top: 40%
                 }
 
                 &--right {
+                    width: 16px;
+                    height: 25px;
                     right: -48px;
                     top: 40%;
                 }
