--- a/wp-content/themes/simple/sass/_news.scss
+++ b/wp-content/themes/simple/sass/_news.scss
@@ -213,8 +213,8 @@
             margin: 0px 10px;
 
             .news__item-image {
-                width: 190px;
-                height: 190px;
+                width: 112px;
+                height: 112px;
                 clip-path: circle();
             }
 
@@ -242,7 +242,7 @@
                 }
 
                 .info__text {
-
+                    display: none;
                     padding-bottom: 10px;
                 }
 
