Applying corrections on contact_form

--- a/wp-content/themes/simple/sass/_news.scss
+++ b/wp-content/themes/simple/sass/_news.scss
@@ -386,6 +386,7 @@
                 }
 
                 .info__text {
+                    display: block;
                     text-align: center;
                     width: 288px;
                     height: 110px;
