Add header to single.php

--- a/wp-content/themes/simple/sass/style.scss
+++ b/wp-content/themes/simple/sass/style.scss
@@ -111,3 +111,4 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 @import"news";
 @import"contact";
 @import"footer";
+@import"post";
