--- a/wp-content/themes/simple/style.css
+++ b/wp-content/themes/simple/style.css
@@ -2434,4 +2434,70 @@ html {
 	}
 }
 
+.post {
+	width: 100%;
+	min-height: 1345px;
+	background-color: white;
+}
+
+.post__header {
+	position: relative;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+	height: 220px;
+	border-bottom: 2px dotted #023A5C;
+	color: #023A5C;
+}
+
+.post__title {
+	font-size: 3rem;
+	text-transform: uppercase;
+}
+
+.post__info {
+	position: absolute;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-end;
+	right: 0px;
+	bottom: 0px;
+	margin: 0px 10px 10px 0px;
+	text-align: right;
+	width: 150px;
+	height: 60px;
+}
+
+.post__date {
+	font-size: 1.4rem;
+	font-weight: 500;
+}
+
+.post__tags {
+	padding: 5px 0px;
+}
+
+.post__author {
+	width: 100%;
+}
+
+.post__user {
+	text-transform: uppercase;
+	font-weight: 700;
+}
+
+.post__content {
+	width: 100%;
+	min-height: 1125px;
+	background-color: yellow;
+}
+
+.post__content .contnet__wrapper {
+	padding-top: 45px;
+	width: 100%;
+	height: 100%;
+	background-color: gray;
+}
+
 /*# sourceMappingURL=style.css.map */
